--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "dayjs": "^1.10.6",
+    "js-cookie": "^3.0.0",
     "nuxt": "^2.15.7",
     "vue-tailwind": "^2.4.2"
   },
