--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^10.3.3",
     "cross-env": "^7.0.3",
+    "fibers": "^5.0.0",
     "postcss": "^8.3.6",
+    "sass": "^1.38.2",
+    "sass-loader": "^10.2.0",
     "tailwindcss": "^2.2.7"
   }
 }
