--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "postcss": "^8.3.6",
     "sass": "^1.38.2",
     "sass-loader": "^10.2.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "tailwindcss": "^2.2.7"
   }
 }
